[project]
name = "prdx"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "Sam Ball", email = "stmball@gmail.com" }
]
dependencies = [
    "gseapy>=1.1.3",
    "matplotlib>=3.9.2",
    "numpy>=2.0.1",
    "pandas>=2.2.2",
    "plotly>=5.23.0",
    "adjusttext>=1.2.0",
    "scipy>=1.14.0",
    "scikit-learn>=1.5.1",
]
readme = "README.md"
requires-python = ">= 3.12"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = []

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/prdx"]
